Salesforce/main/default/main/default/objects/Produto_de_Requisicao__c/fields/Embalagem__c.field-meta.xml
<CustomField>
    <fullName>Embalagem__c</fullName>
    <label>Embalagem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saca 60 Mil Sementes</fullName>
            </value>
            <value>
                <fullName>Bag 5 Milhões Sementes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>