Salesforce/main/default/main/default/objects/Produto_de_Requisicao__c/fields/Multiplicador__c.field-meta.xml
<CustomField>
    <fullName>Multiplicador__c</fullName>
    <formula>Requisicao_de_compra__r.Multiplicador__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Multiplicador</label>
    <type>Text</type>
</CustomField>