Salesforce/main/default/main/default/objects/Produto_de_Requisicao__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Produtos de Requisição</relationshipLabel>
    <relationshipName>Produtos_de_Requisi_o</relationshipName>
    <type>Lookup</type>
</CustomField>