Salesforce/main/default/main/default/objects/Produto_de_Requisicao__c/fields/Produto_principal__c.field-meta.xml
<CustomField>
    <fullName>Produto_principal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto principal</label>
    <referenceTo>Produto_de_Requisicao__c</referenceTo>
    <relationshipLabel>Produtos de Requisição</relationshipLabel>
    <relationshipName>Produtos_de_Requisi_o</relationshipName>
    <type>Lookup</type>
</CustomField>