Salesforce/main/default/main/default/objects/Produto_de_Requisicao__c/fields/Requisicao_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Requisicao_de_compra__c</fullName>
    <label>Requisição de compra</label>
    <referenceTo>Requisicao_de_compra__c</referenceTo>
    <relationshipLabel>Produtos de Requisição</relationshipLabel>
    <relationshipName>Produtos_de_Requisicao</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>