Salesforce/main/default/main/default/objects/Produto_de_Requisicao__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <formula>TEXT(Requisicao_de_compra__r.Tipo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo</label>
    <type>Text</type>
</CustomField>