Salesforce/main/default/main/default/objects/Produto_de_Requisicao__c/fields/Variedad__c.field-meta.xml
<CustomField>
    <fullName>Variedad__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Variedad</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>Variedad__c.Disponivel_para_venda_basica__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Variedad__c.Cultura__c</field>
            <operation>equals</operation>
            <value>MILHO</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>Produtos de Requisição</relationshipLabel>
    <relationshipName>Produtos_de_Requisicao</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>