Salesforce/main/default/main/default/objects/Produto_de_Requisicao__c/recordTypes/Soja.recordType-meta.xml
<RecordType>
    <fullName>Soja</fullName>
    <active>true</active>
    <label>Soja</label>
</RecordType>